--- a/platforms/android/src/main/AndroidManifest.xml
+++ b/platforms/android/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:normalScreens="true"
         android:largeScreens="true"
         android:xlargeScreens="true"/>
-	
+
    <uses-sdk
         android:minSdkVersion="17"
 		android:targetSdkVersion="23"/>
-    
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:name="com.tns.NativeScriptApplication"
         android:allowBackup="true"
@@ -28,7 +30,7 @@
             android:name="com.tns.NativeScriptActivity"
             android:label="@string/title_activity_kimera"
             android:configChanges="keyboardHidden|orientation|screenSize">
-            
+
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,5 +39,4 @@
         </activity>
         <activity android:name="com.tns.ErrorReportActivity"/>
     </application>
-
 </manifest>
